# Dwale

./: #CMakeLists.txt#  .gitignore  .gitmodules  ;  CMakeLists.txt  README.md  TODO  premake5.lua
inc/: dwale.h  premake5.lua
inc/audio/: audio.h
inc/core/: core.h  debug.h  errcode.h  types.h
inc/util/: vector.h  vector2.h
inc/video/: camera.h  renderer.h  surface.h  video.h  window.h
inc/video/gl/: default_shaders.h  gl_object.h  shader.h  texture.h  vertex_object.h
src/: dwale.c
src/audio/: audio.c  miniaudio.c
src/core/: debug.c
src/video/: camera.c  renderer.c  surface.c  video.c  window.c
src/video/gl/: gl_object.c  shader.c  stb_image.c  texture.c  vertex_object.c
test/: CMakeLists.txt  DebugTest.make  WindowTest.make  premake5.lua
test/src/: t_debug.c  t_gl_object.c  t_shaders.c  t_vector.c  t_window.c
test/src/res/: t_gl_object_fragment_shader.glsl  t_gl_object_vertex_shader.glsl
test/src/res_vector/: arrow_fragment_shader.glsl  arrow_vertex_shader.glsl
test/src/t_audio/: t_audio.c
test/src/t_camera/: t_camera.c
test/src/t_camera/res/: tux_fragment.glsl  tux_vertex.glsl
test/src/t_matrix/: t_matrix.c
test/src/t_matrix/res/: arrow_fragment_shader.glsl  arrow_vertex_shader.glsl
test/src/t_surface/: t_surface.c
test/src/t_surface/res/: fragment.glsl  fragment_bsd.glsl  vertex.glsl
test/src/t_texture/: t_texture.c
test/src/t_texture/res/: fragment_shader.glsl  vertex_shader.glsl
